# gaasdDemo

./: .gitignore  README.md
cbf/: CMakeLists.txt  (+1 more)
cbfArbitration/: CMakeLists.txt  Readme.md
cbfArbitration/doc/cbfControlRevision/: cbfControlRevision.tex
cbfArbitration/doc/computeBarrierSecondDerivativeFree/: computeBarrierSecondDerivativeFree.tex
cbfArbitration/doc/rotateVectorByMinusYaw/: rotateVectorByMinusYaw.tex
cbfArbitration/doc/solveQpHildreth/: solveQpHildreth.tex
cbfArbitration/include/cpp/: cbfControlRevision.hpp  cbfTypes.hpp  clampControlInput.hpp  computeBarrierFirstDerivative.hpp  computeBarrierSecondDerivativeFree.hpp  computeBarrierSquared.hpp  computeObstacleAffineConstraint.hpp  rotateVectorByMinusYaw.hpp  solveQpHildreth.hpp
cbfArbitration/include/mbd/: CbfControlRevision.hpp  CbfMbdTypes.hpp  ClampControlInput.hpp  ComputeBarrierFirstDerivative.hpp  ComputeBarrierSecondDerivativeFree.hpp  ComputeBarrierSquared.hpp  ComputeObstacleAffineConstraint.hpp  FuncModule.hpp  RotateVectorByMinusYaw.hpp  SolveQpHildreth.hpp
cbfArbitration/models/: ComputeObstacleAffineConstraint.json
cbfArbitration/scripts/: compile_all_docs.py  gen_cpp_unit_plots.py  gen_design_docs.py  gen_mbd_models.py  gen_mbd_tests.py  plot_scenarios.py
cbfArbitration/src/cpp/: cbfControlRevision.cpp  clampControlInput.cpp  computeBarrierFirstDerivative.cpp  computeBarrierSecondDerivativeFree.cpp  computeBarrierSquared.cpp  computeObstacleAffineConstraint.cpp  rotateVectorByMinusYaw.cpp  solveQpHildreth.cpp
cbfArbitration/src/mbd/: CbfControlRevision.cpp  ClampControlInput.cpp  ComputeBarrierFirstDerivative.cpp  ComputeBarrierSecondDerivativeFree.cpp  ComputeBarrierSquared.cpp  ComputeObstacleAffineConstraint.cpp  RotateVectorByMinusYaw.cpp  SolveQpHildreth.cpp
cbfArbitration/tests/cppTest/Integration/cross_pedestrian/: cross_pedestrian.csv
cbfArbitration/tests/cppTest/Integration/cut_in/: cut_in.csv
cbfArbitration/tests/cppTest/Integration/lead_brake/: lead_brake.csv
cbfArbitration/tests/cppTest/sim/: simulate_scenarios.cpp
cbfArbitration/tests/cppTest/unit/cbfControlRevision/: cbfControlRevision_test.cpp
cbfArbitration/tests/cppTest/unit/clampControlInput/: clampControlInput_test.cpp
cbfArbitration/tests/cppTest/unit/computeBarrierFirstDerivative/: computeBarrierFirstDerivative_cases.json  computeBarrierFirstDerivative_test.cpp
cbfArbitration/tests/cppTest/unit/computeBarrierSecondDerivativeFree/: computeBarrierSecondDerivativeFree_test.cpp
cbfArbitration/tests/cppTest/unit/computeBarrierSquared/: computeBarrierSquared_cases.json  computeBarrierSquared_test.cpp
cbfArbitration/tests/cppTest/unit/computeObstacleAffineConstraint/: computeObstacleAffineConstraint_cases.json  computeObstacleAffineConstraint_test.cpp
cbfArbitration/tests/cppTest/unit/rotateVectorByMinusYaw/: rotateVectorByMinusYaw_cases.json  rotateVectorByMinusYaw_test.cpp
cbfArbitration/tests/cppTest/unit/solveQpHildreth/: solveQpHildreth_test.cpp
cbfArbitration/tests/cppTest/verify/: cbfControlRevision_verify.txt  computeBarrierSquared_verify.txt  computeObstacleAffineConstraint_verify.txt
cbfArbitration/tests/mbdTest/unit/CbfControlRevision/: CbfControlRevision_cases.json  CbfControlRevision_test.cpp
cbfArbitration/tests/mbdTest/unit/ClampControlInput/: ClampControlInput_cases.json  ClampControlInput_test.cpp
cbfArbitration/tests/mbdTest/unit/ComputeBarrierFirstDerivative/: ComputeBarrierFirstDerivative_cases.json  ComputeBarrierFirstDerivative_test.cpp
cbfArbitration/tests/mbdTest/verify/: ClampControlInput_verify.txt  ComputeBarrierSecondDerivativeFree_verify.txt  ComputeObstacleAffineConstraint_verify.txt  SolveQpHildreth_verify.txt
test/integration_sim/: CMakeLists.txt  README.md
test/integration_sim/output/: cross_pedestrian.csv  cut_in.csv  lead_brake.csv  swerve_obstacle.csv
test/integration_sim/scripts/: plot_scenarios.py
test/integration_sim/src/: integration_sim.cpp
waypointFollow/: CMakeLists.txt  Readme.md
waypointFollow/doc/clampValue/: clampValue.tex
waypointFollow/doc/evaluatePolynomial/: evaluatePolynomial.tex
waypointFollow/doc/evaluatePolynomialSlope/: evaluatePolynomialSlope.tex
waypointFollow/doc/fitCubicPolynomial/: fitCubicPolynomial.tex
waypointFollow/doc/fitWaypointTrajectory/: fitWaypointTrajectory.tex
waypointFollow/doc/mpcComputeCost/: mpcComputeCost.tex
waypointFollow/doc/mpcOptimize/: mpcOptimize.tex
waypointFollow/doc/normalizeAngle/: normalizeAngle.tex
waypointFollow/doc/predictBicycleState/: predictBicycleState.tex
waypointFollow/doc/solveLinearSystem/: solveLinearSystem.tex
waypointFollow/doc/waypointFollow/: waypointFollow.tex
waypointFollow/include/cpp/: clampValue.hpp  evaluatePolynomial.hpp  evaluatePolynomialSlope.hpp  fitCubicPolynomial.hpp  fitWaypointTrajectory.hpp  mpcComputeCost.hpp  mpcOptimize.hpp  normalizeAngle.hpp  predictBicycleState.hpp  solveLinearSystem.hpp  waypointFollow.hpp  waypointFollowTypes.hpp
waypointFollow/include/mbd/: ClampValue.hpp  EvaluatePolynomial.hpp  EvaluatePolynomialSlope.hpp  FitCubicPolynomial.hpp  FitWaypointTrajectory.hpp  FuncModule.hpp  MpcComputeCost.hpp  MpcOptimize.hpp  NormalizeAngle.hpp  PredictBicycleState.hpp  WaypointFollow.hpp
waypointFollow/models/: FitWaypointTrajectory.json  MpcComputeCost.json  MpcOptimize.json  WaypointFollow.json
waypointFollow/src/cpp/: clampValue.cpp  evaluatePolynomial.cpp  evaluatePolynomialSlope.cpp  fitCubicPolynomial.cpp  fitWaypointTrajectory.cpp  mpcComputeCost.cpp  mpcOptimize.cpp  normalizeAngle.cpp  predictBicycleState.cpp  solveLinearSystem.cpp  waypointFollow.cpp
waypointFollow/src/mbd/: ClampValue.cpp  EvaluatePolynomial.cpp  EvaluatePolynomialSlope.cpp  FitCubicPolynomial.cpp  FitWaypointTrajectory.cpp  MpcComputeCost.cpp  MpcOptimize.cpp  NormalizeAngle.cpp  PredictBicycleState.cpp  WaypointFollow.cpp
waypointFollow/tests/cppTest/verify/: waypointFollow_verify.txt
waypointFollow/tests/mbdTest/verify/: ClampValue_verify.txt  NormalizeAngle_verify.txt  WaypointFollow_verify.txt  funcmodule_arch_check.txt
(+136 files in other folders)
